--- a/charts/agent/tests/gke_autopilot_volumes_test.yaml
+++ b/charts/agent/tests/gke_autopilot_volumes_test.yaml
@@ -27,15 +27,13 @@ tests:
           path: spec.template.spec.volumes[?(@.hostPath.path == "/run")]
       - isNotNull:
           path: spec.template.spec.volumes[?(@.hostPath.path == "/var/run")]
-      - isNotNull:
-          path: spec.template.spec.volumes[?(@.hostPath.path == "/sys/kernel/debug")]
       # This seems not work as expected, need deeper investigation
       # - lengthEqual:
       #     path: spec.template.spec.volumes[?(@.hostPath.path =~ /\/.*/)]
       #     count: 10
       # We are going to use this "workaround" until we found a proper solution
       - isNull:
-          path: spec.template.spec.volumes[?(@.hostPath.path =~ /\/.*/ && @.hostPath.path != "/dev" && @.hostPath.path != "/proc" && @.hostPath.path != "/etc/modprobe.d" && @.hostPath.path != "/etc/os-release" && @.hostPath.path != "/boot" && @.hostPath.path != "/lib/modules" && @.hostPath.path != "/usr" && @.hostPath.path != "/run" && @.hostPath.path != "/var/run" && @.hostPath.path != "/sys/kernel/debug")]
+          path: spec.template.spec.volumes[?(@.hostPath.path =~ /\/.*/ && @.hostPath.path != "/dev" && @.hostPath.path != "/proc" && @.hostPath.path != "/etc/modprobe.d" && @.hostPath.path != "/etc/os-release" && @.hostPath.path != "/boot" && @.hostPath.path != "/lib/modules" && @.hostPath.path != "/usr" && @.hostPath.path != "/run" && @.hostPath.path != "/var/run")]
 
   - it: Ensure only volumes from host allowed in GKE Autopilot when agent running in slim mode are mounted
     set:
@@ -56,8 +54,6 @@ tests:
           path: spec.template.spec.volumes[?(@.hostPath.path == "/boot")]
       - isNotNull:
           path: spec.template.spec.volumes[?(@.hostPath.path == "/var/run/containerd/containerd.sock")]
-      - isNotNull:
-          path: spec.template.spec.volumes[?(@.hostPath.path == "/sys/kernel/debug")]
       
       # This seems not work as expected, need deeper investigation
       # - lengthEqual:
@@ -65,4 +61,4 @@ tests:
       #     count: 7
       # We are going to use this "workaround" until we found a proper solution
       - isNull:
-          path: spec.template.spec.volumes[?(@.hostPath.path =~ /\/.*/ && @.hostPath.path != "/dev" && @.hostPath.path != "/proc" && @.hostPath.path != "/etc/modprobe.d" && @.hostPath.path != "/etc/os-release" && @.hostPath.path != "/boot" && @.hostPath.path != "/var/run/containerd/containerd.sock" && @.hostPath.path != "/sys/kernel/debug")]
+          path: spec.template.spec.volumes[?(@.hostPath.path =~ /\/.*/ && @.hostPath.path != "/dev" && @.hostPath.path != "/proc" && @.hostPath.path != "/etc/modprobe.d" && @.hostPath.path != "/etc/os-release" && @.hostPath.path != "/boot" && @.hostPath.path != "/var/run/containerd/containerd.sock")]
