--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -6,6 +6,6 @@ metadata:
     {{- include "cluster-scanner.labels" . | nindent 4 }}
 type: Opaque
 data:
-  sysdig_access_key: {{ .Values.global.sysdigAccessKey | b64enc | quote }}
+  sysdig_access_key: {{ required "please provide a sysdig access key" .Values.global.sysdigAccessKey | b64enc | quote }}
   js_server_password: {{ .Values.js.password | default (randAlphaNum 32) | b64enc | quote }}
   cache_redis_password: {{ .Values.cache.redis.password | b64enc | quote }}
