--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "cluster-scanner.fullname" . }}
+  namespace: {{ include "cluster-scanner.namespace" . }}
   labels:
     {{- include "cluster-scanner.labels" . | nindent 4 }}
 type: Opaque
 data:
   sysdig_access_key: {{ required "please provide a sysdig access key" .Values.global.sysdigAccessKey | b64enc | quote }}
   js_server_password: {{ .Values.js.password | default (randAlphaNum 32) | b64enc | quote }}
+{{- if .Values.cache.redis }}
   cache_redis_password: {{ .Values.cache.redis.password | b64enc | quote }}
+{{- end }}
