--- a/charts/cluster-scanner/templates/serviceaccount.yaml
+++ b/charts/cluster-scanner/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "cluster-scanner.serviceAccountName" . }}
+  namespace: {{ include "cluster-scanner.namespace" . }}
   labels:
     {{- include "cluster-scanner.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
