feat(admission-controller): disable scanner by default

--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -250,7 +250,7 @@ scc:
 
 scanner:
   # If you only want the Kubernetes Audit Log functionality then disable this, and it will disable the Admission Controller Scanning Policy functionality.
-  enabled: true
+  enabled: false
   # Service name for Scanner deployment
   name: scanner
   # Amount of replicas for scanner
