fix comparison for old unittest version. cleanup

--- a/charts/cluster-scanner/tests/secret_test.yaml
+++ b/charts/cluster-scanner/tests/secret_test.yaml
@@ -9,8 +9,6 @@ release:
 
 tests:
   - it: "has correct name and namespace"
-    templates:
-      - ../templates/secret.yaml
     set:
       global.sysdigAccessKey: "secret"
     asserts:
@@ -22,8 +20,6 @@ tests:
           value: test-ns
 
   - it: "generates a secret resource"
-    templates:
-      - ../templates/secret.yaml
     set:
       global.sysdigAccessKey: "secret"
     asserts:
@@ -31,15 +27,11 @@ tests:
           of: Secret
 
   - it: "requires access key"
-    templates:
-      - ../templates/secret.yaml
     asserts:
       - failedTemplate:
           errorMessage: "please provide a sysdig access key"
 
   - it: "has correct default content"
-    templates:
-      - ../templates/secret.yaml
     set:
       global.sysdigAccessKey: "secret"
     asserts:
@@ -49,12 +41,10 @@ tests:
       - not: true
         isEmpty:
           path: data.js_server_password
-      - isEmpty:
+      - isNull:
           path: data.cache_redis_password
 
   - it: "fills cache redis password, when set"
-    templates:
-      - ../templates/secret.yaml
     set:
       global.sysdigAccessKey: "secret"
       cache.redis.password: "secret"
