--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -8,7 +8,7 @@ metadata:
 type: Opaque
 data:
   sysdig_access_key: {{ required "please provide a sysdig access key" .Values.global.sysdigAccessKey | b64enc | quote }}
-  js_server_password: {{ .Values.js.password | default (randAlphaNum 32) | b64enc | quote }}
+  js_server_password: {{ .Values.natsJS.password | default (randAlphaNum 32) | b64enc | quote }}
 {{- if .Values.cache.redis }}
   cache_redis_password: {{ .Values.cache.redis.password | b64enc | quote }}
 {{- end }}
